--- a/FrontEnd/app/src/main/AndroidManifest.xml
+++ b/FrontEnd/app/src/main/AndroidManifest.xml
@@ -12,7 +12,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FoodOrdering">
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.OrderDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.UserAuthActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.HomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,6 +29,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
